--- a/main.html
+++ b/main.html
@@ -35,7 +35,45 @@
   </div>
 
 <script>
-//Your code goes here 
+	const items = document.querySelectorAll('.item');
+
+items.forEach(item => {
+    let isDragging = false;
+    let offsetX, offsetY;
+
+    item.addEventListener('mousedown', (e) => {
+        isDragging = true;
+        offsetX = e.clientX - item.getBoundingClientRect().left;
+        offsetY = e.clientY - item.getBoundingClientRect().top;
+        item.style.position = 'absolute';
+        item.style.zIndex = 1000;
+    });
+
+    document.addEventListener('mousemove', (e) => {
+        if (!isDragging) return;
+        let x = e.clientX - offsetX;
+        let y = e.clientY - offsetY;
+
+        // Ensuring the item stays inside the container boundaries
+        const container = document.querySelector('.items');
+        const containerRect = container.getBoundingClientRect();
+        const itemRect = item.getBoundingClientRect();
+
+        // Boundaries
+        if (x < containerRect.left) x = containerRect.left;
+        if (y < containerRect.top) y = containerRect.top;
+        if (x + itemRect.width > containerRect.right) x = containerRect.right - itemRect.width;
+        if (y + itemRect.height > containerRect.bottom) y = containerRect.bottom - itemRect.height;
+
+        item.style.left = `${x}px`;
+        item.style.top = `${y}px`;
+    });
+
+    document.addEventListener('mouseup', () => {
+        isDragging = false;
+    });
+});
+
 </script>
 
   </body>
